--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if current_user %>
+    Welcome, <%= current_user.username.upcase %> -
+    <%= link_to "Logout", logout_path, method: :delete %>
+  <% else %>
+    <!-- <%= link_to "Login", login_path %> -->
+  <% end %>
 
   <% flash.each do |type, msg| %>
       <%= content_tag :div, msg, class: "flash_#{type}" %>
