--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Welcome, <%= @user.username %> </h1>
-<%= link_to "Logout", logout_path, method: :delete%>
+
+<ul>
+  <li><%= link_to "My Tools", tools_path %> </li>
+  <li><%= link_to "Categories", categories_path %></li>
+</ul>
